styles/globals.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,body{
  @apply bg-primary text-gray-300;
  font-family: Arial, Helvetica, sans-serif;
}

.borderText{
  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent; 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #888; 
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555; 
}

/* Disable rounded corners on input fields using Safari (iPhone & iPad) */
input{ 
  -webkit-appearance: none;
  -webkit-border-radius: 0;
}

